Body parsing improvements Documentation for httpClient

--- a/packages/http/package.json
+++ b/packages/http/package.json
@@ -22,7 +22,8 @@
     "prepack": "cp ../../README.md ./ && cp -R ../../assets ./"
   },
   "files": [
-    "dist/"
+    "dist/",
+    "assets/"
   ],
   "publishConfig": {
     "access": "public"
