--- a/packages/json-api/package.json
+++ b/packages/json-api/package.json
@@ -20,7 +20,8 @@
     "clean": "rimraf dist",
     "lint": "tslint --config ../../tslint.json --project ./",
     "test": "jest --config='./jest.config.js' --json --outputFile='./reports/test.json' --testLocationInResults --runInBand --coverage",
-    "test:watch": "jest --config='./jest.config.js' --watch"
+    "test:watch": "jest --config='./jest.config.js' --watch",
+    "prepack": "cp -R ../../assets ./"
   },
   "files": [
     "dist/",
