--- a/packages/json-api/package.json
+++ b/packages/json-api/package.json
@@ -23,7 +23,8 @@
     "clean": "rimraf dist",
     "lint": "tslint --config ../../tslint.json --project ./",
     "test": "jest --config='./jest.config.js' --json --outputFile='./reports/test.json' --testLocationInResults --runInBand --coverage",
-    "test:watch": "jest --config='./jest.config.js' --watch"
+    "test:watch": "jest --config='./jest.config.js' --watch",
+    "prepack": "yarn lint && yarn test && yarn build"
   },
   "files": [
     "dist/",
