--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "coolio",
-  "version": "0.1.15",
+  "version": "0.1.17",
   "description": "Extendable networking client",
   "homepage": "https://github.com/headline-1/coolio",
   "bugs": "https://github.com/headline-1/coolio/issues",
@@ -15,11 +15,12 @@
     "purge": "yarn clean && rimraf node_modules",
     "release": "lerna publish --force-publish=*",
     "dist": "chmod 755 ./scripts/pack.sh && ./scripts/pack.sh",
-    "lint": "lerna exec -- yarn lint",
+    "lint": "eslint ./packages/**/src --ext ts",
     "link:all": "lerna exec -- yarn link",
     "unlink:all": "lerna exec -- yarn unlink",
-    "test": "lerna exec -- yarn test",
-    "test:watch": "lerna exec -- yarn test:watch",
+    "test": "jest --config='./jest.config.js' --json --outputFile='./reports/test.json' --testLocationInResults --runInBand --coverage",
+    "test:watch": "jest --config='./jest.config.js' --watch",
+    "verify": "yarn lint && yarn test",
     "version:new": "yarn version --no-git-tag-version --no-commit-hooks && lerna version --yes --no-git-tag-version --no-commit-hooks",
     "version:bump": "yarn version --patch --no-git-tag-version --no-commit-hooks && lerna version patch --yes --no-git-tag-version --no-commit-hooks && git add */package.json package.json lerna.json"
   },
@@ -30,20 +31,20 @@
     }
   },
   "devDependencies": {
-    "@types/jest": "^24.0.11",
-    "@types/lodash": "^4.14.122",
-    "@types/node": "^11.9.4",
-    "husky": "^1.3.1",
-    "jest": "^24.5.0",
-    "lerna": "^3.13.1",
-    "ts-jest": "^24.0.0",
-    "ts-loader": "^5.3.3",
-    "tslint": "^5.12.1",
-    "tslint-config-airbnb-base": "^0.2.0",
-    "tslint-config-prettier": "^1.18.0",
-    "tslint-consistent-codestyle": "^1.15.0",
-    "tslint-no-circular-imports": "^0.6.2",
-    "typescript": "^3.4.1",
+    "@types/jest": "^24.0.15",
+    "@types/lodash": "^4.14.134",
+    "@types/node": "^12.0.8",
+    "@typescript-eslint/eslint-plugin": "^1.11.0",
+    "@typescript-eslint/parser": "^1.11.0",
+    "codecov": "^3.5.0",
+    "eslint": "^5.16.0",
+    "eslint-plugin-import": "^2.18.0",
+    "husky": "^2.4.1",
+    "jest": "^24.8.0",
+    "lerna": "^3.15.0",
+    "ts-jest": "^24.0.2",
+    "ts-loader": "^6.0.3",
+    "typescript": "^3.5.2",
     "whatwg-fetch": "^3.0.0"
   },
   "workspaces": [
