--- a/packages/json-api/package.json
+++ b/packages/json-api/package.json
@@ -20,7 +20,7 @@
   "scripts": {
     "start": "tsc -w --preserveWatchOutput",
     "build": "tsc",
-    "prepack": "yarn lint && yarn test && yarn build"
+    "prepack": "yarn build"
   },
   "files": [
     "dist/",
@@ -45,5 +45,5 @@
   "dependencies": {
     "lodash": "^4.17.11"
   },
-  "gitHead": "c7b468581d0801579acfdaef25b47d335219c11e"
+  "gitHead": "df3e4ca748cf0eba95323a60ae934ac5afed495b"
 }
