FIX(Headers): Headers are calculated after interceptors do their work * Previously headers were calculated before interceptors made any changes, which was invalid behavior * Body serialization takes place in serializer now

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "coolio",
-  "version": "0.1.18",
+  "version": "0.1.19",
   "description": "Extendable networking client",
   "homepage": "https://github.com/headline-1/coolio",
   "bugs": "https://github.com/headline-1/coolio/issues",
@@ -8,11 +8,13 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "postinstall": "lerna exec -- yarn && lerna bootstrap",
-    "build": "lerna exec --concurrency 1 -- yarn build",
-    "start": "yarn clean && yarn build && lerna run --parallel start",
+    "postinstall": "lerna bootstrap",
+    "build": "lerna exec -- tsc",
+    "build:watch": "lerna exec --parallel 'tsc -w --preserveWatchOutput'",
+    "start": "yarn build && yarn build:watch",
     "clean": "rimraf packages/*/{dist,.jest,reports} && rimraf dist",
     "purge": "yarn clean && rimraf node_modules",
+    "prepack": "yarn build && yarn verify",
     "release": "lerna publish --force-publish=*",
     "dist": "chmod 755 ./scripts/pack.sh && ./scripts/pack.sh",
     "lint": "eslint ./packages/**/src --ext ts",
