--- a/packages/http/package.json
+++ b/packages/http/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@coolio/http",
-  "version": "0.2.0",
+  "version": "0.3.0-alpha.0",
   "description": "HTTP networking client",
   "keywords": [
     "http",
