--- a/packages/json-api/package.json
+++ b/packages/json-api/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@coolio/json-api",
-  "version": "0.3.0-alpha.0",
+  "version": "0.3.1",
   "description": "JSON API wrapper for Coolio HTTP Client",
   "keywords": [
     "json-api",
@@ -35,7 +35,7 @@
     "@coolio/http": "^0.1.0"
   },
   "devDependencies": {
-    "@coolio/http": "^0.3.0-alpha.0"
+    "@coolio/http": "^0.3.1"
   },
   "dependencies": {
     "lodash": "^4.17.11"
