--- a/package.json
+++ b/package.json
@@ -21,13 +21,10 @@
     "unlink:all": "lerna exec -- yarn unlink",
     "test": "jest --config='./jest.config.js' --json --outputFile='./reports/test.json' --testLocationInResults --runInBand --coverage",
     "test:watch": "jest --config='./jest.config.js' --watch",
-    "verify": "yarn lint && yarn test",
-    "version:new": "yarn version --no-git-tag-version --no-commit-hooks && lerna version --yes --no-git-tag-version --no-commit-hooks",
-    "version:bump": "yarn version --patch --no-git-tag-version --no-commit-hooks && lerna version patch --yes --no-git-tag-version --no-commit-hooks && git add */package.json package.json lerna.json"
+    "verify": "yarn lint && yarn test"
   },
   "husky": {
     "hooks": {
-      "pre-commit": "yarn version:bump",
       "pre-push": "yarn lint"
     }
   },
