imp(package): modules distributed in tree-shaking-friendly, bundlable format, marked package as not creating side effects

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "coolio",
-  "version": "0.5.0",
+  "version": "0.6.0",
   "description": "Extendable networking client",
   "homepage": "https://github.com/headline-1/coolio",
   "bugs": "https://github.com/headline-1/coolio/issues",
@@ -9,12 +9,13 @@
   "private": true,
   "scripts": {
     "postinstall": "lerna bootstrap",
-    "build": "lerna exec -- tsc",
+    "build": "lerna run build",
     "build:watch": "lerna exec --parallel 'tsc -w --preserveWatchOutput'",
+    "compile": "lerna run compile",
     "start": "yarn build && yarn build:watch",
-    "clean": "rimraf packages/*/{dist,.jest,reports} && rimraf dist",
+    "clean": "rimraf packages/*/{dist} && rimraf {dist,.jest,reports}",
     "purge": "yarn clean && rimraf node_modules",
-    "prepack": "yarn build && yarn verify",
+    "prepack": "yarn clean && yarn compile && yarn verify",
     "release": "lerna publish --force-publish=*",
     "lint": "eslint ./packages/**/src --ext ts",
     "link:all": "lerna exec -- yarn link",
