--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,15 +2,23 @@
   "compilerOptions": {
     "module": "commonjs",
     "target": "es6",
-    "lib": ["es2018", "dom"],
-    "jsx": "react",
-    "sourceMap": true,
-    "declaration": true,
+    "incremental": true,
+    "removeComments": true,
+    "preserveConstEnums": true,
     "esModuleInterop": true,
-    "strict": true,
+    "sourceMap": true,
+    "strictFunctionTypes": true,
+    "noImplicitAny": true,
+    "noImplicitThis": true,
     "moduleResolution": "node",
+    "stripInternal": false,
+    "lib": [
+      "es5",
+      "es2018",
+      "dom"
+    ],
+    "strict": true,
     "forceConsistentCasingInFileNames": true,
-    "noImplicitReturns": true,
     "importHelpers": true,
     "suppressImplicitAnyIndexErrors": true
   },
