--- a/packages/http/package.json
+++ b/packages/http/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@coolio/http",
-  "version": "0.5.0",
+  "version": "0.6.0",
   "description": "HTTP networking client",
   "keywords": [
     "http",
@@ -13,12 +13,19 @@
   "author": "Krzysztof Miemiec <krzysztof.miemiec@gmail.com>",
   "homepage": "https://github.com/headline-1/coolio/tree/master/packages/http#readme",
   "license": "MIT",
-  "main": "./dist/index.js",
-  "types": "./dist/index.d.ts",
+  "main": "./dist/cjs/index.js",
+  "module": "./dist/esm5/index.js",
+  "es2015": "./dist/esm/index.js",
+  "types": "./dist/types/index.d.ts",
+  "sideEffects": false,
   "files": [
     "dist/",
     "assets/"
   ],
+  "scripts": {
+    "build": "tsc",
+    "compile": "tsc -b ./tsconfig.cjs.json ./tsconfig.esm.json ./tsconfig.esm5.json ./tsconfig.types.json"
+  },
   "publishConfig": {
     "access": "public"
   },
