--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "purge": "yarn clean && rimraf node_modules",
     "prepack": "yarn clean && yarn compile && yarn verify",
     "release": "lerna publish --force-publish=*",
-    "lint": "eslint ./packages/**/src --ext ts",
+    "lint": "eslint ./packages/*/src/**/*.ts",
     "link:all": "lerna exec -- yarn link",
     "unlink:all": "lerna exec -- yarn unlink",
     "test": "jest --config='./jest.config.js' --json --outputFile='./reports/test.json' --testLocationInResults --runInBand --coverage",
@@ -34,7 +34,6 @@
     "@types/node": "^12.12.11",
     "@typescript-eslint/eslint-plugin": "^2.8.0",
     "@typescript-eslint/parser": "^2.8.0",
-    "codecov": "^3.6.1",
     "eslint": "^6.6.0",
     "eslint-plugin-import": "^2.18.2",
     "husky": "^3.1.0",
