ci: added commitlint

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,8 +22,6 @@ jobs:
     - name: Build packages
       run: yarn compile
     - name: Release
-      run: |
-        npm config set //registry.npmjs.org/:_authToken=$NPM_TOKEN
-        yarn release
+      run: yarn release
       env:
         NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
