ci(release process): semantic release with lerna

--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "homepage": "https://github.com/headline-1/coolio",
   "bugs": "https://github.com/headline-1/coolio/issues",
   "author": "Krzysztof Miemiec <krzysztof.miemiec@gmail.com>",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/headline-1/coolio.git"
+  },
   "license": "MIT",
   "private": true,
   "scripts": {
@@ -15,7 +19,7 @@
     "clean": "rimraf packages/*/{dist} && rimraf {dist,.jest,reports}",
     "purge": "yarn clean && rimraf node_modules",
     "prepack": "yarn clean && yarn compile && yarn verify",
-    "release": "lerna publish --npm-client npm --force-publish=*",
+    "release": "lerna publish --conventional-commits --create-release github -m 'chore(release): publish %s' --npm-client=npm --force-publish=*",
     "lint": "eslint ./packages/*/src/**/*.ts",
     "link:all": "lerna exec -- yarn link",
     "unlink:all": "lerna exec -- yarn unlink",
@@ -28,6 +32,11 @@
       "pre-commit": "yarn lint",
       "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
     }
+  },
+  "commitlint": {
+    "extends": [
+      "@commitlint/config-conventional"
+    ]
   },
   "release": {
     "branch": "master"
