--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,7 +21,8 @@ jobs:
       run: yarn
     - name: Build packages
       run: yarn compile
-    - name: Release
-      run: yarn release
+    - name: Create release & publish package
+      run: yarn release --yes
       env:
+        GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
