--- a/lerna.json
+++ b/lerna.json
@@ -4,5 +4,10 @@
   "useWorkspaces": true,
   "packages": [
     "packages/*"
-  ]
+  ],
+  "command": {
+    "version": {
+      "allowBranch": "master"
+    }
+  }
 }
