--- a/lerna.json
+++ b/lerna.json
@@ -6,8 +6,9 @@
     "packages/*"
   ],
   "command": {
-    "version": {
-      "allowBranch": "master"
+    "publish": {
+      "allowBranch": "master",
+      "npmClient": "npm"
     }
   }
 }
