--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,16 +13,27 @@ jobs:
         node_version: ['12']
     steps:
     - uses: actions/checkout@v1
-    - name: Prepare repository (resolves detached HEAD issue)
-      run: git checkout "${GITHUB_REF:11}"
+    - name: Checkout Hack (Push Ability)
+      run: |
+        git config --global user.name "Headline1 Automation"
+        git config --global user.email "automation@headline-1.dev"
+        git remote set-url origin https://user:${GH_TOKEN}@github.com/${GITHUB_REPOSITORY}
+        git remote -v
+        git checkout "${GITHUB_REF:11}"
+      env:
+        GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     - name: Use Node.js ${{ matrix.node_version }}
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
     - name: Install dependencies
       run: yarn
+    - name: Build packages
+      run: yarn compile
     - name: Create release & publish package
-      run: yarn release --yes
+      run: |
+        npm config set //registry.npmjs.org/:_authToken=$NPM_TOKEN
+        yarn release --yes
       env:
         GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
