--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "clean": "rimraf packages/*/{dist} && rimraf {dist,.jest,reports}",
     "purge": "yarn clean && rimraf node_modules",
     "prepack": "yarn clean && yarn compile",
-    "release": "lerna publish --conventional-commits --create-release github -m 'chore(release): publish %s' --force-publish=*",
+    "release:version": "lerna version --conventional-commits --create-release github -m 'chore(release): publish %s' --force-publish=*",
+    "release:publish": "lerna publish from-git --force-publish=*",
     "lint": "eslint ./packages/*/src/**/*.ts",
     "link:all": "lerna exec -- yarn link",
     "unlink:all": "lerna exec -- yarn unlink",
