--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,7 +33,7 @@ jobs:
     - name: Create release
       run: yarn release:version --yes
       env:
-        GH_TOKEN: ${{ secrets.GITHUB_PERSONAL_TOKEN }}
+        GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   npm-publish:
     runs-on: ubuntu-latest
     needs: github-release
