--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -57,6 +57,6 @@ jobs:
     - name: Create release & publish package
       run: |
         npm config set //registry.npmjs.org/:_authToken=$NPM_TOKEN
-        ./script/retry.sh yarn release:publish --yes --no-verify-access
+        ${{ github.workspace }}/script/retry.sh yarn release:publish --yes --no-verify-access
       env:
         NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
