--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,10 +20,6 @@ jobs:
         git remote set-url origin https://automation:${GH_TOKEN}@github.com/${GITHUB_REPOSITORY}
         git remote -v
         git checkout "${GITHUB_REF:11}"
-        echo $(pwd)
-        ls -la
-        cd ..
-        ls -la
       env:
         GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     - name: Use Node.js ${{ matrix.node_version }}
@@ -61,6 +57,6 @@ jobs:
     - name: Create release & publish package
       run: |
         npm config set //registry.npmjs.org/:_authToken=$NPM_TOKEN
-        ${{ github.workspace }}/script/retry.sh yarn release:publish --yes --no-verify-access
+        ./scripts/retry.sh yarn release:publish --yes --no-verify-access
       env:
         NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
