--- a/packages/auth-interceptor/tsconfig.cjs.json
+++ b/packages/auth-interceptor/tsconfig.cjs.json
@@ -1,10 +1,10 @@
 {
-  "extends": "../../tsconfig.json",
+  "extends": "../../tsconfig.cjs.json",
   "compilerOptions": {
     "baseUrl": ".",
     "rootDir": "src",
     "typeRoots": ["./node_modules/@types", "../../node_modules/@types"],
-    "noEmit": true
+    "outDir": "./dist/cjs"
   },
   "include": [
     "./src"
