--- a/packages/http-request-handler/package.json
+++ b/packages/http-request-handler/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@coolio/auth-interceptor",
+  "name": "@coolio/http-request-handler",
   "version": "0.8.3",
-  "description": "Authentication interceptor for Coolio",
+  "description": "Http request handler for Coolio",
   "keywords": [
     "auth",
     "authentication",
@@ -10,7 +10,7 @@
     "http"
   ],
   "author": "Krzysztof Miemiec <krzysztof.miemiec@gmail.com>",
-  "homepage": "https://github.com/headline-1/coolio/tree/master/packages/auth-interceptor#readme",
+  "homepage": "https://github.com/headline-1/coolio/tree/master/packages/http-request-handler#readme",
   "license": "MIT",
   "main": "./dist/cjs/index.js",
   "module": "./dist/esm5/index.js",
