--- a/tsconfig.esm.json
+++ b/tsconfig.esm.json
@@ -3,6 +3,7 @@
   "compilerOptions": {
     "module": "esnext",
     "importHelpers": true,
+    "declaration": true,
     "target": "es2015"
   },
   "exclude": [
