--- a/tsconfig.esm5.json
+++ b/tsconfig.esm5.json
@@ -3,6 +3,7 @@
   "compilerOptions": {
     "module": "esnext",
     "importHelpers": true,
+    "declaration": true,
     "target": "es5"
   },
   "exclude": [
