fix(encoding): fix for invalid body encoding issue
I used 'buffer' npm module to handle correct character encoding when using utf-8 (and possibly others) with ArrayBuffer.
Additionally, a hotfix for build was added - config.cjs.json emits declaration now

--- a/packages/http/package.json
+++ b/packages/http/package.json
@@ -38,6 +38,7 @@
   },
   "dependencies": {
     "@types/qs": "^6.9.0",
+    "buffer": "^5.4.3",
     "lodash": "^4.17.15",
     "qs": "^6.9.1"
   },
