fix(request-handlers): all request handlers are available from bindings
* moved http request handler back to core http package
* every request handler has to be imported by using `@coolio/http/request-handlers/<name>` path
* fixes problems with environment-specific request handlers being eagerly evaluated by various development tools i.e. react-native

--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "postinstall": "lerna bootstrap",
+    "postinstall": "lerna bootstrap && yarn bind",
     "compile:watch": "lerna exec --parallel 'yarn compile:watch'",
-    "compile": "lerna run compile",
+    "bind": "node ./scripts/generate-package-bindings.js",
+    "compile": "lerna run compile && yarn bind",
     "start": "yarn compile && yarn compile:watch",
     "clean": "rimraf packages/*/{dist} && rimraf {dist,.jest,reports}",
     "purge": "yarn clean && rimraf node_modules",
