--- a/packages/http/package.json
+++ b/packages/http/package.json
@@ -19,9 +19,21 @@
   "types": "./dist/types/index.d.ts",
   "sideEffects": false,
   "files": [
-    "dist/",
-    "assets/"
+    "dist/**/!(*.tsbuildinfo)",
+    "assets/",
+    "helpers",
+    "request-handlers/"
   ],
+  "bindings": {
+    "baseDistDir": "dist/cjs",
+    "baseTypesDir": "dist/types",
+    "map": {
+      "request-handlers/fetch": "requestHandlers/fetch.requestHandler",
+      "request-handlers/http": "requestHandlers/http.requestHandler",
+      "request-handlers/mock": "requestHandlers/mock.requestHandler",
+      "request-handlers/xhr": "requestHandlers/xhr.requestHandler"
+    }
+  },
   "scripts": {
     "compile": "tsc -b ./tsconfig.cjs.json ./tsconfig.esm.json ./tsconfig.esm5.json ./tsconfig.types.json",
     "compile:watch": "yarn compile -w --preserveWatchOutput"
