--- a/packages/json-api/package.json
+++ b/packages/json-api/package.json
@@ -25,8 +25,7 @@
     "compile:watch": "yarn compile -w --preserveWatchOutput"
   },
   "files": [
-    "dist/",
-    "assets/"
+    "dist/**/!(*.tsbuildinfo)"
   ],
   "publishConfig": {
     "access": "public"
