--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "postinstall": "lerna bootstrap && yarn bind",
+    "postinstall": "lerna bootstrap && yarn generate",
     "compile:watch": "lerna exec --parallel 'yarn compile:watch'",
-    "bind": "node ./scripts/generate-package-bindings.js",
-    "compile": "lerna run compile && yarn bind",
+    "generate": "yarn generate:tsconfig && yarn generate:bindings",
+    "generate:bindings": "node ./scripts/generate-bindings.js",
+    "generate:tsconfig": "node ./scripts/generate-tsconfig.js",
+    "compile": "lerna run compile && yarn generate",
     "start": "yarn compile && yarn compile:watch",
     "clean": "rimraf packages/*/{dist} && rimraf {dist,.jest,reports}",
     "purge": "yarn clean && rimraf node_modules",
