--- a/packages/json-api/package.json
+++ b/packages/json-api/package.json
@@ -38,7 +38,7 @@
     "url": "https://github.com/headline-1/coolio/issues"
   },
   "peerDependencies": {
-    "@coolio/http": "^0.8.3"
+    "@coolio/http": "*"
   },
   "devDependencies": {
     "@coolio/http": "^0.9.0"
