fix(typings): using downlevel-dts to bring back TS<3.7 support
* updated build dependencies (lerna, jest, husky, typescript)
* added downlevel-dts scripts and a fallback for old typings

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "generate:tsconfig": "node ./scripts/generate-tsconfig.js",
     "compile": "lerna run compile",
     "start": "yarn compile && yarn compile:watch",
-    "clean": "rimraf packages/*/{dist} && rimraf {dist,.jest,reports}",
+    "clean": "git clean -xdf",
     "purge": "yarn clean && rimraf node_modules",
     "prepack": "yarn clean && yarn compile",
     "release:version": "lerna version --conventional-commits --create-release github -m 'chore(release): publish %s' --force-publish=*",
@@ -46,21 +46,22 @@
     "branch": "master"
   },
   "devDependencies": {
-    "@commitlint/cli": "^8.2.0",
-    "@commitlint/config-conventional": "^8.2.0",
-    "@types/jest": "^24.0.23",
+    "@commitlint/cli": "^8.3.5",
+    "@commitlint/config-conventional": "^8.3.4",
+    "@types/jest": "^25.1.2",
     "@types/lodash": "^4.14.149",
     "@types/node": "^12.12.11",
-    "@typescript-eslint/eslint-plugin": "^2.8.0",
-    "@typescript-eslint/parser": "^2.8.0",
-    "eslint": "^6.6.0",
-    "eslint-plugin-import": "^2.18.2",
-    "husky": "^3.1.0",
-    "jest": "^24.9.0",
-    "lerna": "^3.19.0",
-    "ts-jest": "^24.1.0",
+    "@typescript-eslint/eslint-plugin": "^2.20.0",
+    "@typescript-eslint/parser": "^2.20.0",
+    "downlevel-dts": "^0.4.0",
+    "eslint": "^6.8.0",
+    "eslint-plugin-import": "^2.20.1",
+    "husky": "^4.2.3",
+    "jest": "^25.1.0",
+    "lerna": "^3.20.2",
+    "ts-jest": "^25.2.0",
     "ts-loader": "^6.2.1",
-    "typescript": "^3.7.2",
+    "typescript": "^3.7.5",
     "whatwg-fetch": "^3.0.0"
   },
   "workspaces": [
