--- a/packages/http/package.json
+++ b/packages/http/package.json
@@ -17,7 +17,14 @@
   "module": "./dist/esm5/index.js",
   "es2015": "./dist/esm/index.js",
   "types": "./dist/types/index.d.ts",
+  "typesVersions": {
+    "<3.7": { "*": ["./dist/types-compat/*"] }
+  },
   "sideEffects": false,
+  "scripts": {
+    "compile": "tsc -b ./tsconfig.cjs.json ./tsconfig.esm.json ./tsconfig.esm5.json ./tsconfig.types.json && downlevel-dts ./dist/types ./dist/types-compat",
+    "compile:watch": "yarn compile -w --preserveWatchOutput"
+  },
   "files": [
     "dist/**/!(*.tsbuildinfo)",
     "request-handlers/"
@@ -31,10 +38,6 @@
       "request-handlers/mock": "requestHandlers/mock.requestHandler",
       "request-handlers/xhr": "requestHandlers/xhr.requestHandler"
     }
-  },
-  "scripts": {
-    "compile": "tsc -b ./tsconfig.cjs.json ./tsconfig.esm.json ./tsconfig.esm5.json ./tsconfig.types.json",
-    "compile:watch": "yarn compile -w --preserveWatchOutput"
   },
   "publishConfig": {
     "access": "public"
