--- a/packages/json-api/package.json
+++ b/packages/json-api/package.json
@@ -19,9 +19,12 @@
   "module": "./dist/esm5/index.js",
   "es2015": "./dist/esm/index.js",
   "types": "./dist/types/index.d.ts",
+  "typesVersions": {
+    "<3.7": { "*": ["./dist/types-compat/*"] }
+  },
   "sideEffects": false,
   "scripts": {
-    "compile": "tsc -b ./tsconfig.cjs.json ./tsconfig.esm.json ./tsconfig.esm5.json ./tsconfig.types.json",
+    "compile": "tsc -b ./tsconfig.cjs.json ./tsconfig.esm.json ./tsconfig.esm5.json ./tsconfig.types.json && downlevel-dts ./dist/types ./dist/types-compat",
     "compile:watch": "yarn compile -w --preserveWatchOutput"
   },
   "files": [
