--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "generate:tsconfig": "node ./scripts/generate-tsconfig.js",
     "compile": "lerna run compile",
     "start": "yarn compile && yarn compile:watch",
-    "clean": "git clean -xdf",
-    "purge": "yarn clean && rimraf node_modules",
+    "clean": "rimraf packages/*/dist && rimraf {dist,.jest,reports}",
+    "purge": "git clean -xdf",
     "prepack": "yarn clean && yarn compile",
     "release:version": "lerna version --conventional-commits --create-release github -m 'chore(release): publish %s' --force-publish=*",
     "release:publish": "lerna publish from-git --force-publish=*",
