--- a/packages/auth-interceptor/package.json
+++ b/packages/auth-interceptor/package.json
@@ -17,15 +17,11 @@
   "es2015": "./dist/esm/index.js",
   "types": "./dist/types/index.d.ts",
   "typesVersions": {
-    "<3.7": {
-      "*": [
-        "./dist/types-compat/*"
-      ]
-    }
+    "<3.7": { "*": ["dist/types-compat/*"] }
   },
   "sideEffects": false,
   "scripts": {
-    "compile": "tsc -b ./tsconfig.cjs.json ./tsconfig.esm.json ./tsconfig.esm5.json ./tsconfig.types.json && downlevel-dts ./dist/types ./dist/types-compat",
+    "compile": "tsc -b ./tsconfig.cjs.json ./tsconfig.esm.json ./tsconfig.esm5.json ./tsconfig.types.json && downlevel-dts . ./dist/types-compat",
     "compile:watch": "yarn compile -w --preserveWatchOutput"
   },
   "files": [
