--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "lerna": "^3.20.2",
     "ts-jest": "^25.2.0",
     "ts-loader": "^6.2.1",
+    "tsc-watch": "^4.1.0",
     "typescript": "^3.7.5",
     "whatwg-fetch": "^3.0.0"
   },
