--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "downlevel-dts": "^0.4.0",
     "eslint": "^6.8.0",
     "eslint-plugin-import": "^2.20.1",
+    "lodash": "^4.17.15",
     "husky": "^4.2.3",
     "jest": "^25.1.0",
     "lerna": "^3.20.2",
