docs(gitbook): added docs binding script
added automatic summary consolidation script, which is tied to the directory layout in coolio project

--- a/package.json
+++ b/package.json
@@ -18,12 +18,12 @@
     "generate:bindings": "node ./scripts/generate-bindings.js",
     "generate:tsconfig": "node ./scripts/generate-tsconfig.js",
     "compile": "lerna run compile",
-    "docs": "lerna run docs",
+    "docs": "lerna run docs && node ./scripts/generate-docs.js",
     "start": "yarn compile && yarn compile:watch",
     "clean": "rimraf packages/*/dist && rimraf {dist,.jest,reports}",
     "purge": "git clean -xdf",
     "prepack": "yarn clean && yarn compile",
-    "release:version": "lerna version --conventional-commits --create-release github -m 'chore(release): publish %s' --force-publish=*",
+    "release:version": "yarn docs && lerna version --conventional-commits --create-release github -m 'chore(release): publish %s' --force-publish=*",
     "release:publish": "lerna publish from-git --force-publish=*",
     "lint": "eslint ./packages/*/src/**/*.ts",
     "link:all": "lerna exec -- yarn link",
