--- a/package.json
+++ b/package.json
@@ -49,18 +49,24 @@
   "devDependencies": {
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^8.3.4",
+    "@types/body-parser": "^1.19.0",
+    "@types/express": "^4.17.2",
     "@types/jest": "^25.1.2",
     "@types/lodash": "^4.14.149",
+    "@types/multer": "^1.4.2",
     "@types/node": "^12.12.11",
     "@typescript-eslint/eslint-plugin": "^2.20.0",
     "@typescript-eslint/parser": "^2.20.0",
+    "body-parser": "^1.19.0",
     "downlevel-dts": "^0.4.0",
     "eslint": "^6.8.0",
     "eslint-plugin-import": "^2.20.1",
+    "express": "^4.17.1",
     "husky": "^4.2.3",
     "jest": "^25.1.0",
     "lerna": "^3.20.2",
     "lodash": "^4.17.15",
+    "multer": "^1.4.2",
     "ts-jest": "^25.2.0",
     "ts-loader": "^6.2.1",
     "tsc-watch": "^4.1.0",
