--- a/packages/http/package.json
+++ b/packages/http/package.json
@@ -58,6 +58,7 @@
   "dependencies": {
     "@types/qs": "^6.9.0",
     "buffer": "^5.4.3",
+    "form-data": "^3.0.0",
     "lodash": "^4.17.15",
     "qs": "^6.9.1"
   },
