--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^8.3.4",
     "@types/body-parser": "^1.19.0",
+    "@types/cors": "^2.8.6",
     "@types/express": "^4.17.2",
     "@types/jest": "^25.1.2",
     "@types/lodash": "^4.14.149",
@@ -58,6 +59,7 @@
     "@typescript-eslint/eslint-plugin": "^2.20.0",
     "@typescript-eslint/parser": "^2.20.0",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "downlevel-dts": "^0.4.0",
     "eslint": "^6.8.0",
     "eslint-plugin-import": "^2.20.1",
