fix(http/form-data): sorting out issues with form-data
* Got rid of form-data and replaced it with similar implementation rewritten in TypeScript.
* Using native (browser) FormData in non-Node environments
* Support for browser FormData to CFormData conversion (works in Jest)
* Support for CFormData in httpRequestHandler
* Support for native (browser) FormData in fetch & xhr RequestHandlers

--- a/packages/http/package.json
+++ b/packages/http/package.json
@@ -58,8 +58,9 @@
   "dependencies": {
     "@types/qs": "^6.9.1",
     "buffer": "^5.5.0",
-    "form-data": "^3.0.0",
+    "combined-stream": "^1.0.8",
     "lodash": "^4.17.15",
+    "mime-types": "^2.1.26",
     "qs": "^6.9.1"
   },
   "gitHead": "df3e4ca748cf0eba95323a60ae934ac5afed495b"
