--- a/package.json
+++ b/package.json
@@ -50,10 +50,12 @@
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^8.3.4",
     "@types/body-parser": "^1.19.0",
+    "@types/combined-stream": "^1.0.2",
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.3",
     "@types/jest": "^25.1.4",
     "@types/lodash": "^4.14.149",
+    "@types/mime-types": "^2.1.0",
     "@types/multer": "^1.4.2",
     "@types/node": "^12.12.30",
     "@typescript-eslint/eslint-plugin": "^2.24.0",
