--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "@types/express": "^4.17.3",
     "@types/jest": "^25.1.4",
     "@types/lodash": "^4.14.149",
-    "@types/mime-types": "^2.1.0",
+    "@types/mime": "^2.0.1",
     "@types/multer": "^1.4.2",
     "@types/node": "^12.12.30",
     "@typescript-eslint/eslint-plugin": "^2.24.0",
