improvement(json-api): reworked core
* Got rid of method-specific builders
* Created builders: basic (for GET/DELETE) and creational (for POST/PUT/PATCH)
* Builders are used to create a request without focusing on the response
* Breaking change: Created senders: for single resource and for many resources
* Senders are used to configure parsing options, send the requests and parse it
* Reorganized code in repository, adjusted file names
* Added bits of documentation

--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "yarn lint",
+      "pre-push": "yarn lint",
       "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
     }
   },
