--- a/packages/auth-interceptor/package.json
+++ b/packages/auth-interceptor/package.json
@@ -18,7 +18,7 @@
   "types": "./dist/types/index.d.ts",
   "typesVersions": {
     "<3.7": {
-      "*": [
+      "dist/types/*": [
         "dist/types-compat/*"
       ]
     }
@@ -26,7 +26,7 @@
   "sideEffects": false,
   "scripts": {
     "compile": "tsc -b ./tsconfig.cjs.json ./tsconfig.esm.json ./tsconfig.esm5.json ./tsconfig.types.json && yarn compile:types-compat",
-    "compile:types-compat": "downlevel-dts . ./dist/types-compat",
+    "compile:types-compat": "downlevel-dts ./dist/types ./dist/types-compat",
     "compile:watch": "tsc-watch -b ./tsconfig.cjs.json ./tsconfig.esm.json ./tsconfig.esm5.json ./tsconfig.types.json --noClear --onSuccess 'yarn compile:types-compat'",
     "docs": "rimraf ../../docs/auth-interceptor/api && typedoc src"
   },
