--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,7 +26,9 @@ jobs:
       run: yarn compile
     - name: Upload built packages
       uses: actions/upload-artifact@v2-preview
-      with: { name: dist, path: ./packages/*/dist/ }
+      with:
+        name: dist
+        path: ./packages/{*/dist/,http/request-handlers}
   coverage:
     name: Test Coverage
     needs: build
