--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "postinstall": "lerna bootstrap && yarn generate",
+    "postinstall": "lerna bootstrap && yarn link:all && yarn generate",
     "compile:watch": "lerna exec --parallel 'yarn compile:watch'",
     "generate": "yarn generate:tsconfig && yarn generate:bindings",
     "generate:bindings": "node ./scripts/generate-bindings.js",
